--- a/CalorieCounter/Views/Home/Index.cshtml
+++ b/CalorieCounter/Views/Home/Index.cshtml
@@ -8,9 +8,6 @@
     Layout = null;
 } 
 
-@*@section Stylesheets {
-    <link rel="stylesheet" href="~/css/Home.css" /> 
-}*@
 
 <!DOCTYPE html>
 <html lang="en">
@@ -44,7 +41,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+          <div class="navbar-collapse collapse d-sm-inline-flex justify-content-around">
             <ul class="navbar-nav flex-grow-1">
               <li class="nav-item"><a
                   class="nav-link"
@@ -72,6 +69,16 @@
                   asp-action="Index"
                   >Motivation</a>
               </li>
+            </ul>
+            <ul class="navbar-nav list-inline me-5">
+                <li class="nav-item">
+                    <a
+                  class="nav-link"
+                  asp-area=""
+                  asp-controller="Motivation"
+                  asp-action="Index"
+                  >Profile</a>
+                </li>
             </ul>
           </div>
         </div>
