--- a/CalorieCounter/Views/Shared/_Layout.cshtml
+++ b/CalorieCounter/Views/Shared/_Layout.cshtml
@@ -47,8 +47,7 @@
                   asp-action="Index">Food
                 </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdownMenu">
-                      <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Create Food</a>
-                      <!-- Add more dropdown options here if needed --> 
+                      <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="CreateFood">Create Food</a>
                   </div>
               </li>
               <li class="nav-item" id="nav-it"><a
