--- a/CalorieCounter/wwwroot/css/Food.css
+++ b/CalorieCounter/wwwroot/css/Food.css
@@ -11,9 +11,10 @@ body {
     background: linear-gradient( to bottom, #23c686 0%, #23c686 80%, #fbfcf6 80%, #fbfcf6 100% );
     font-family: 'Manrope', sans-serif;
     overflow-x: hidden;
+    overflow-y: auto;
     background-attachment: fixed; 
 }
-
+/* Navigation */
 .nav-item {
     margin-left: 5%;
     font-size: 1.25rem;
@@ -37,28 +38,15 @@ body {
     cursor: pointer;
 }
 
-
-.meal-item .meal-item-info{
-    padding-right: 3%; 
-}
-
-.total-container .total-item:nth-child(1){
-    padding-left: 23%;
-}
-
-.total-container .total-item{
-    padding-right: 3%; 
-}
-
 .searchbar {
     margin-top: 3%;
     padding-left: 6%;
     display: flex;
     gap: .75rem;
     border-bottom:none;
+    position: relative;
     z-index: 1000; 
 }
-
 
 #autocompleteResults {
     width: 100%;
@@ -66,11 +54,11 @@ body {
     margin-left: 6%;
     margin-top: 1px;
     background: #fff;
-    /*box-shadow: 0 30px 30px rgba(0, 0, 0, 0, 0.05);*/
     border-radius: 10px;
     border: 1px solid #333;
     border-top:none; 
     overflow: hidden;
+    position: absolute;
     z-index: 1000;
 }
 
@@ -86,7 +74,6 @@ body {
     background-color: #DDF7E3;
     z-index: 10000;
 }
-
 
 .searchbar input[type=text] {
     width: 900px;
@@ -112,56 +99,39 @@ body {
     animation: animate-shadow .2s forwards;
 }
 
-.container {
+/* Boxes container */
+.boxes-container{
+    padding-bottom: 3rem;
+    width: 100%;
     display: flex;
-    align-items: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-70%, -50%);
-    margin-right: 5%;
-    margin-top: 5%;
-    font-family: 'Kalam', cursive;
-    font-size: 1.5rem; 
+    margin-top: 100px;
+    position: relative;
 }
 
-.container h5, h2, p, select, label, button {
+h5, h2, p, select, label, button {
     font-family: 'Kalam', cursive;
 }
 
 .form {
     background-color: white;
-    padding: 1% 3%;
+    padding: 1% 2%;
     margin: 0% 3%;
-    position: relative;
-    left: 25%;
-    right: 25%;
     border-radius: 20px;
     font-size: 1rem;
-    border: 2px solid #C0C0C0;
+    box-shadow: 5px 10px 30px rgba(0,0,0,0.2);
 }
 
-.form:before {
-    content: '';
-    position: absolute;
-    bottom: -12%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-    background: rgba(0, 0, 0, 0.3);
-    z-index: -1;
-    filter: blur(10px);
-}
 
 hr {
     border-top: 2px solid #099d02;
     margin-top: 0;
 }
 
-
 .food-container {
     min-width: 400px;
-    max-width: 1000px;
+    max-width: 500px;
+    height: 300px;
+    font-family: 'Kalam', cursive !important;
 }
 
 .food-container .food-img {
@@ -169,36 +139,9 @@ hr {
     height: 2.3rem;
 }
 
-
-.meals-header .meals-heading-names {
-    font-weight: bold;
-    padding-right: 4%;
-}
-
-.meals-header {
-    margin-left: 15%;
-}
-
-.meal-items-list li {
-    margin-left: 10%;
-}
-
 .meals-container {
-    width: 640px; 
-}
-
-.meals-container *{
-    z-index: -1; 
-}
-
-.meals-container p {
-    margin-left: 10%;
-}
-
-.meals-container .total-line {
-    padding: 0;
-    margin: 0 0 0 7rem; /*SOMETHING IN CAUTION!!!!!!!!!!!!!!!!*/
-    border: 1px solid black;
+    width: 900px;
+    font-family: 'Kalam', cursive !important;
 }
 
 .form h2 {
@@ -212,15 +155,15 @@ hr {
     height: 25px;
 }
 
-    .food-name-container .food-quantity-input {
-        max-width: 50px;
-        max-height: 25px;
-        margin-right: 2%;
-    }
+.food-name-container .food-quantity-input {
+    max-width: 50px;
+    max-height: 25px;
+    margin-right: 2%;
+}
 
-    .food-name-container select, option {
-        cursor: pointer;
-    }
+.food-name-container select, option {
+    cursor: pointer;
+}
 
 .food-quantity-container {
     display: flex;
@@ -230,6 +173,18 @@ hr {
 .food-btn-container {
     display: flex;
     justify-content: end;
+}
+
+thead th {
+    width: 200px;
+}
+
+.spacer-cell {
+    height: 40px;
+}
+
+.align-col {
+    text-align: left;
 }
 
 
@@ -244,68 +199,68 @@ hr {
     border: 1px solid #333;
 }
 
-    .dropdown input {
-        cursor: pointer;
-        background-color: #fff;
-        border: none;
-        outline: none;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0, 0.05);
-        border-radius: 10px;
-        max-width: 100px;
-        max-height: 20px;
-        padding: 10px;
-    }
+.dropdown input {
+    cursor: pointer;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0, 0.05);
+    border-radius: 10px;
+    max-width: 100px;
+    max-height: 20px;
+    padding: 10px;
+}
 
-    .dropdown::before {
-        content: '';
-        position: absolute;
-        right: .5rem;
-        top: 5px;
-        z-index: 100;
-        width: 8px;
-        height: 8px;
-        border: 2px solid #333;
-        border-top: 2px solid #fff;
-        border-right: 2px solid #fff;
-        transform: rotate(-45deg);
-        transition: 500ms;
-        pointer-events: none;
-    }
+.dropdown::before {
+    content: '';
+    position: absolute;
+    right: .5rem;
+    top: 5px;
+    z-index: 100;
+    width: 8px;
+    height: 8px;
+    border: 2px solid #333;
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    transform: rotate(-45deg);
+    transition: 500ms;
+    pointer-events: none;
+}
 
-    .dropdown.active::before {
-        transform: rotate(-225deg);
-        top: 12px;
-    }
+.dropdown.active::before {
+    transform: rotate(-225deg);
+    top: 12px;
+}
 
-    .dropdown .option {
-        position: absolute;
-        top: 2rem;
-        width: 100%;
-        background: #fff;
-        box-shadow: 0 30px 30px rgba(0, 0, 0, 0, 0.05);
-        border-radius: 10px;
-        border: 1px solid #333;
-        overflow: hidden;
-        display: none;
-    }
+.dropdown .option {
+    position: absolute;
+    top: 2rem;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 30px 30px rgba(0, 0, 0, 0, 0.05);
+    border-radius: 10px;
+    border: 1px solid #333;
+    overflow: hidden;
+    display: none;
+}
 
-    .dropdown.active .option {
-        display: block;
-    }
+.dropdown.active .option {
+    display: block;
+}
 
-    .dropdown .option div {
-        padding: 1% 2%;
-        cursor: pointer;
-    }
+.dropdown .option div {
+    padding: 1% 2%;
+    cursor: pointer;
+}
 
-        .dropdown .option div:hover {
-            background: #DDF7E3;
-        }
+.dropdown .option div:hover {
+    background: #DDF7E3;
+}
 
-    .dropdown .option img {
-        position: relative;
-        margin-right: .5%;
-    }
+.dropdown .option img {
+    position: relative;
+    margin-right: .5%;
+}
 
 
 /* THE BUTTON TO ADD FOOD TO DAILY MEALS */
