--- a/CalorieCounter/Views/Motivation/Index.cshtml
+++ b/CalorieCounter/Views/Motivation/Index.cshtml
@@ -21,38 +21,58 @@
 </head>
 <body>
      <header>
-      <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3">
+      <nav
+        class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3"
+      >
         <div class="container-fluid">
-          <button 
+          <button
             class="navbar-toggler custom-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target=".navbar-collapse"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation">
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+          <div
+            class="navbar-collapse collapse d-sm-inline-flex justify-content-around"
+          >
             <ul class="navbar-nav flex-grow-1">
-              <li class="nav-item"><a
+              <li class="nav-item">
+                <a
                   class="nav-link"
                   asp-area=""
                   asp-controller="Home"
-                  asp-action="Index">Home</a>
+                  asp-action="Index"
+                  >Home</a>
               </li>
-              <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
+              <li
+                class="nav-item dropdown"
+                onmouseover="showDropdown()"
+                onmouseout="hideDropdown()"
+              >
                 <a
                   class="nav-link"
                   asp-area=""
                   asp-controller="Food"
                   asp-action="Index"
                   >Food</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdownMenu">
-                      <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="CreateFood">Create Food</a>
-                      <!-- Add more dropdown options here if needed -->
-                  </div>
+                <div
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdown"
+                  id="dropdownMenu"
+                >
+                  <a
+                    class="dropdown-item"
+                    asp-area=""
+                    asp-controller="Home"
+                    asp-action="CreateFood"
+                    >Create Food</a>
+                  <!-- Add more dropdown options here if needed -->
+                </div>
               </li>
               <li class="nav-item" id="nav-it">
                 <a
@@ -61,6 +81,16 @@
                   asp-controller="Motivation"
                   asp-action="Index"
                   >Motivation</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav list-inline me-5">
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  asp-area=""
+                  asp-controller="Profile"
+                  asp-action="Index"
+                  >Profile</a>
               </li>
             </ul>
           </div>
