--- a/CalorieCounter/Views/Profile/Index.cshtml
+++ b/CalorieCounter/Views/Profile/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CalorieCounter.Models.ViewModels
+@using Newtonsoft.Json
 
 @model ProfileViewModel
 
@@ -54,7 +55,11 @@
         var selectedAttribute = Model.User.Gender == gender ? "selected" : "";
         gendersHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", gender, selectedAttribute, gender);
     }
+
+    var weightHistoryJson = JsonConvert.SerializeObject(Model.Weights);
+    var str = 0;
 }
+
 
 
 <!DOCTYPE html>
@@ -215,6 +220,9 @@
       </div>
     </div>
 
+    <script>
+        var weightHistory = @Html.Raw(weightHistoryJson);
+    </script>
     <script src="~/js/Profile.js"></script>
   </body>
 </html>
