--- a/CalorieCounter/Views/Profile/Index.cshtml
+++ b/CalorieCounter/Views/Profile/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CalorieCounter.Models.ViewModels
 @using Newtonsoft.Json
+@using System.Text
 
 @model ProfileViewModel
 
@@ -22,42 +23,35 @@
         "female"
     };
 
-    string activity = "";
-    switch (Model.User.Activity)
+    List<string> goalsOptions = new List<string>()
     {
-        case 1:
-            activity = "Sedentary";
-            break;
-        case 2:
-            activity = "Lightly active";
-            break;
-        case 3:
-            activity = "Moderately active";
-            break;
-        case 4:
-            activity = "Very active";
-            break;
-        case 5:
-            activity = "Extremely active";
-            break;
+        "Lose weight",
+        "Maintain weight",
+        "Gain weight"
+    };
+
+    var optionsHtml = new StringBuilder();
+    for(int i = 0; i < activityOptions.Count; i++)
+    {
+        var selectedAttribute = Model.User.Activity == i + 1 ? "selected" : "";
+        optionsHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", i + 1, selectedAttribute, activityOptions[i]);
     }
 
-    var optionsHtml = new System.Text.StringBuilder();
-    foreach (var option in activityOptions)
+    var gendersHtml = new StringBuilder();
+    for(int i = 0; i < genderOptions.Count; i++)
     {
-        var selectedAttribute = activity == option ? "selected" : "";
-        optionsHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", option, selectedAttribute, option);
+        var selectedAttribute = Model.User.Gender == genderOptions[i] ? "selected" : "";
+        gendersHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", genderOptions[i], selectedAttribute, genderOptions[i]);
     }
 
-    var gendersHtml = new System.Text.StringBuilder();
-    foreach(var gender in genderOptions)
+    var goalsHtml = new StringBuilder();
+    for(int i = 0; i < goalsOptions.Count; i++)
     {
-        var selectedAttribute = Model.User.Gender == gender ? "selected" : "";
-        gendersHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", gender, selectedAttribute, gender);
+        var selectedAttribute = Model.User.Goal == i + 1 ? "selected" : "";
+        goalsHtml.AppendFormat("<option value='{0}' {1}>{2}</option>", i + 1, selectedAttribute, goalsOptions[i]);
     }
 
     var weightHistoryJson = JsonConvert.SerializeObject(Model.Weights);
-    var str = 0;
 }
 
 
@@ -158,59 +152,67 @@
     </header>
 
     <div class="profile-grid">
-      <div class="profile">
-        <div class="box-container">
-          <div class="user-data-box">
-            <div class="info-box">
-              <label for="first-name">First Name</label>
-              <input type="text" id="first-name" value="@Model.User.FirstName" />
+      <form method="post" asp-controller="Profile" asp-action="Update">
+          @*<div class="profile">*@
+            <div class="box-container">
+              <div class="user-data-box">
+                <div class="info-box">
+                  <label for="first-name">First Name</label>
+                  <input name="FirstName" type="text" id="first-name" value="@Model.User.FirstName" />
+                </div>
+                <div class="info-box">
+                  <label for="last-name">Last Name</label>
+                  <input name="LastName" type="text" id="last-name" value="@Model.User.LastName" />
+                </div>
+                <div class="info-box">
+                  <label for="email">Email</label>
+                  <input name="Email" type="email" id="email" value="@Model.User.Email" />
+                </div>
+                <div class="info-box">
+                  <label for="age">Age</label>
+                  <input name="Age" type="number" id="age" value="@Model.User.Age" />
+                </div>
+                <div class="info-box">
+                  <label for="goal-select">Goal</label>
+                  <select name="Goal" id="goal-select" class="profile-select">
+                      @Html.Raw(goalsHtml.ToString());
+                  </select>
+                </div>
+              </div>
+              <div class="user-data-box">
+                <div class="info-box">
+                  <label for="weight">Weight (kg)</label>
+                  <input name="Weight" type="number" id="weight" value="@Model.User.Weight" />
+                </div>
+                <div class="info-box">
+                  <label for="height">Height (cm)</label>
+                  <input name="Height" type="number" id="height" value="@Model.User.Height" />
+                </div>
+                <div class="info-box">
+                  <label for="activity-select">Activity</label>
+                  <select
+                    name="Activity"
+                    id="activity-select"
+                    class="profile-select">
+                        @Html.Raw(optionsHtml.ToString());
+                  </select>
+                </div>
+                <div class="info-box">
+                  <label for="gender-select">Gender</label>
+                  <select
+                    name="Gender"
+                    id="gender-select"
+                    class="profile-select">
+                    @Html.Raw(gendersHtml.ToString());
+                  </select>
+                </div>
+                <div class="btn-box">
+                  <button type="submit" class="profile-btn">Save</button>
+                </div>
+              </div>
             </div>
-            <div class="info-box">
-              <label for="last-name">Last Name</label>
-              <input type="text" id="last-name" value="@Model.User.LastName" />
-            </div>
-            <div class="info-box">
-              <label for="email">Email</label>
-              <input type="email" id="email" value="@Model.User.Email" />
-            </div>
-            <div class="info-box">
-              <label for="age">Age</label>
-              <input type="number" id="age" value="@Model.User.Age" />
-            </div>
-          </div>
-          <div class="user-data-box">
-            <div class="info-box">
-              <label for="weight">Weight (kg)</label>
-              <input type="text" id="weight" value="@Model.User.Weight" />
-            </div>
-            <div class="info-box">
-              <label for="height">Height (cm)</label>
-              <input type="text" id="height" value="@Model.User.Height" />
-            </div>
-            <div class="info-box">
-              <label for="activity-select">Activity</label>
-              <select
-                name=""
-                id="activity-select"
-                class="profile-select">
-                    @Html.Raw(optionsHtml.ToString());
-              </select>
-            </div>
-            <div class="info-box">
-              <label for="gender-select">Gender</label>
-              <select
-                name=""
-                id="gender-select"
-                class="profile-select">
-                @Html.Raw(gendersHtml.ToString());
-          </select>
-            </div>
-          </div>
-        </div>
-        <div class="btn-box">
-          <button class="profile-btn">Save</button>
-        </div>
-      </div>
+          @*</div>*@
+      </form>
 
       <div class="weight">
         <div>
