--- a/CalorieCounter/wwwroot/css/Profile.css
+++ b/CalorieCounter/wwwroot/css/Profile.css
@@ -38,19 +38,25 @@ body {
     padding-top: 4rem;
 }
 
-.profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    padding-top: 3rem;
-}
+/* .profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding-top: 3rem;
+} */
 
 .box-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 4rem;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    flex-grow: 0;
+    padding: 2rem;
 }
 
 .user-data-box {
@@ -82,7 +88,7 @@ body {
 
 .btn-box {
     align-self: flex-end;
-    margin-right: 3rem;
+    justify-self: flex-end;
 }
 
 .profile-btn {
@@ -93,7 +99,7 @@ body {
     background: white;
     color: #28b487;
     border-radius: 5px;
-    margin-bottom: 1rem;
+    margin-top: 0.75rem;
     transition: all 300ms;
 }
 
